todo_server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-server-service
  namespace: todo-app
spec:
  selector:
    app: todo-server
  ports:
    - name: api
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: insights
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: web
      protocol: TCP
      port: 8082
      targetPort: 8082
